--- a/templates/input.html
+++ b/templates/input.html
@@ -27,7 +27,7 @@
 <div class="container">
     <div class="container__item">
 
-        <form action="http://localhost:5000/result" method="POST">
+        <form action="https://smart-search-academic.herokuapp.com/result" method="POST">
             <label>
                 <input type="text" name="Name" class="form__field" value="en.wikipedia.org/wiki/London"/>
             </label>
