--- a/templates/output.html
+++ b/templates/output.html
@@ -83,6 +83,89 @@
     </div>
 </div>
 
+<h2>Legend</h2>
+
+<div id="legend">
+    <table style="width:100%">
+        <tr>
+            <th>Tags</th>
+            <th>Meaning</th> 
+        </tr>
+        <tr>
+            <td>PERSON</td>
+            <td>People, including fictional</td>
+        </tr>
+        <tr>
+            <td>NORP</td>
+            <td>Nationalities or religious or political groups</td>
+        </tr>
+        <tr>
+            <td>FAC</td>
+            <td>Buildings, airports, highways, bridges, etc</td>
+        </tr>
+        <tr>
+            <td>ORG</td>
+            <td>Companies, agencies, institutions, etc</td>
+        </tr>
+        <tr>
+            <td>GPE</td>
+            <td>Countries, cities, states</td>
+        </tr>
+        <tr>
+            <td>LOC</td>
+            <td>Non-GPE locations, mountain ranges, bodies of water</td>
+        </tr>
+        <tr>
+            <td>PRODUCT</td>
+            <td>Objects, vehicles, foods, etc (Not services)</td>
+        </tr>
+        <tr>
+            <td>EVENT</td>
+            <td>Named hurricanes, battles, wars, sports events, etc</td>
+        </tr>
+        <tr>
+            <td>WORK_OF_ART</td>
+            <td>Titles of books, songs, etc</td>
+        </tr>
+        <tr>
+            <td>LAW</td>
+            <td>Named documents made into laws</td>
+        </tr>
+        <tr>
+            <td>LANGUAGE</td>
+            <td>Any named language</td>
+        </tr>
+        <tr>
+            <td>DATE</td>
+            <td>Absolute or relative dates or periods</td>
+        </tr>
+        <tr>
+            <td>TIME</td>
+            <td>Periods of time shorter than a day</td>
+        </tr>
+        <tr>
+            <td>PERCENT</td>
+            <td>Percentage, including “%”</td>
+        </tr>
+        <tr>
+            <td>MONEY</td>
+            <td>Monetary values, including unit</td>
+        </tr>
+        <tr>
+            <td>QUANTITY</td>
+            <td>Measurements, as of weight or distance</td>
+        </tr>
+        <tr>
+            <td>ORDINAL</td>
+            <td>“first”, “second”, etc</td>
+        </tr>
+        <tr>
+            <td>CARDINAL</td>
+            <td>Numerals that do not fall under another type</td>
+        </tr>
+    </table>
+</div>
+
 <h1>Visualization</h1>
 <div id="content">{{ visualization | safe }}</div>
 </body>
