--- a/templates/input.html
+++ b/templates/input.html
@@ -3,9 +3,8 @@
 <head>
     <title>Input</title>
     <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="icon" 
-      type="image/png" 
-      href="../static/images/favicon.png">
+    <link rel="shortcut icon" 
+      href="{{ url_for('static', filename='favicon.png')}}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
