--- a/templates/input.html
+++ b/templates/input.html
@@ -3,8 +3,7 @@
 <head>
     <title>Input</title>
     <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="shortcut icon" 
-      href="{{ url_for('static', filename='favicon.png')}}">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
