--- a/templates/output.html
+++ b/templates/output.html
@@ -3,6 +3,7 @@
 <head>
     <title>Summary {{ top_entities[0] }}</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">   <!--Prevent favicon errors-->
+    <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico">
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/btnout.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
