--- a/templates/input.html
+++ b/templates/input.html
@@ -30,7 +30,7 @@
 
         <form action="https://smart-search-academic.herokuapp.com/result" method="POST">
             <label>
-                <input type="text" name="Name" class="form__field" value="en.wikipedia.org/wiki/Knowledge"/>
+                <input type="text" name="Name" class="form__field" value="https://en.wikipedia.org/wiki/Waterloo,_Ontario"/>
             </label>
             <button class="btn btn--primary btn--inside uppercase">SUMMARIZE</button>
         </form>
